--- a/src/input.css
+++ b/src/input.css
@@ -9,19 +9,22 @@
   .flex-center {
     @apply flex justify-center items-center;
   }
+  .animated {
+    @apply transition duration-300;
+  }
 }
 
 @layer base {
   body {
-    @apply poppins_font;
+    @apply poppins_font text-xl;
   }
 }
 
 @layer utilities {
   .poppins_font {
-     font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
   }
-  .triangle_path{
-     clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+  .triangle_path {
+    clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   }
 }
